zero-schema-macros/tests/ui/fail/29_scalar_variant_root_collision.rs
use zero_schema_macros::zero;

#[zero(crate = zs)]
#[repr(u8)]
enum Kind {
    access = 1,
}

fn main() {}
