zero-schema-macros/tests/ui/fail/29_scalar_variant_root_collision.stderr
error: generated zero-schema name collision for `access`
 --> tests/ui/fail/29_scalar_variant_root_collision.rs:6:5
  |
6 |     access = 1,
  |     ^^^^^^
